# RAG-systems

./: .gitignore  README.md
qdrant_vanille/: .env example  qdrant_db_lesson.py  qdrant_vanille_README.md  requirements.txt
try_pdf_RAG_system/: README.md  main.py  pyproject.toml
try_text_RAG_system/: .env example  main.py  pyproject.toml  try_text_RAG_system_README.md
